[tool.poetry]
name = "livedemo"
version = "0.1.0"
description = "automate your bash demos"
authors = ["Gilad Reti <gilad.reti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.9b0"
pytest = "^6.2.5"

[tool.poetry.scripts]
livedemo = 'livedemo.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
